# FCP-Text-Based-Editing

./: .gitignore  README.md  build_macos.sh  fcp_editor.spec  main.py  pyproject.toml  requirements.txt  setup.py
packaging/: create_dmg.sh  entitlements.plist  make_icon.sh  runtime_hook.py
packaging/hooks/: hook-customtkinter.py  hook-torch.py  hook-whisper.py
src/: audio.py  editor.py  exporter.py  fcpxml_parser.py  models.py  timeline.py  transcriber.py  video_player.py  waveform.py
